--- a/package.json
+++ b/package.json
@@ -1,37 +1,35 @@
 {
-  "name": "twake-mobile-server",
+  "name": "twake-mobile-proxy",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
-  "type": "module",
+  "main": "server.js",
   "dependencies": {
-    "@koa/cors": "3.1.0",
-    "@koa/router": "^10.0.0",
     "axios": "^0.21.0",
-    "config": "^3.3.2",
-    "eiows": "3.4.0",
-    "koa": "^2.13.0",
-    "koa-bodyparser": "^4.3.0",
-    "koa-jwt": "^4.0.0",
-    "socket.io": "3.0.1"
+    "fastify": "^3.8.0",
+    "fastify-jwt": "^2.1.3",
+    "fastify-plugin": "^3.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.13.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-standard": "^16.0.1",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-promise": "^4.2.1"
+    "@types/node": "^14.14.7",
+    "nodemon": "^2.0.6",
+    "rimraf": "^3.0.2",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "build": "rimraf ./build && tsc",
+    "start:dev": "nodemon",
+    "start": "npm run build && node build/index.js",
+    "postinstall": "node-config-ts"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/romanesko/TwakeMobileProxy.git"
+  },
   "author": "",
-  "license": "ISC"
+  "license": "GPL-3.0-or-later",
+  "bugs": {
+    "url": "https://github.com/romanesko/TwakeMobileProxy/issues"
+  },
+  "homepage": "https://github.com/romanesko/TwakeMobileProxy#readme"
 }
