--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "axios": "^0.21.0",
     "fastify": "^3.8.0",
     "fastify-jwt": "^2.1.3",
-    "fastify-plugin": "^3.0.0"
+    "fastify-plugin": "^3.0.0",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
     "nodemon": "^2.0.6",
-    "rimraf": "^3.0.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
