--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "axios": "^0.21.0",
     "fastify": "^3.8.0",
     "fastify-jwt": "^2.1.3",
-    "fastify-plugin": "^3.0.0",
+    "fastify-plugin": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
