--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
   "name": "twake-mobile-proxy",
   "version": "1.0.0",
-  "description": "",
+  "description": "API Proxy server for Take mobile app",
   "main": "server.js",
   "dependencies": {
     "axios": "^0.21.0",
     "fastify": "^3.8.0",
     "fastify-jwt": "^2.1.3",
-    "fastify-plugin": "^3.0.0"
+    "fastify-plugin": "^3.0.0",
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
     "nodemon": "^2.0.6",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5",
-    "rimraf": "^3.0.2"
+    "ts-node": "^9.0.0"
   },
   "scripts": {
-    "build": "rimraf ./build && tsc",
+    "build": "tsc",
     "start:dev": "nodemon",
-    "start": "npm run build && node build/index.js",
-    "postinstall": "node-config-ts"
+    "start": "npm run build && node build/index.js"
   },
   "repository": {
     "type": "git",
