--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "axios": "^0.21.0",
     "fastify": "^3.8.0",
     "fastify-jwt": "^2.1.3",
-    "fastify-plugin": "^3.0.0"
+    "fastify-plugin": "^3.0.0",
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
     "nodemon": "^2.0.6",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5",
-    "rimraf": "^3.0.2"
+    "ts-node": "^9.0.0"
   },
   "scripts": {
     "build": "rimraf ./build && tsc",
