--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "API Proxy server for Take mobile app",
   "main": "server.js",
   "dependencies": {
+    "@types/uuid": "^8.3.0",
     "axios": "^0.21.0",
     "fastify": "^3.8.0",
     "fastify-jwt": "^2.1.3",
     "fastify-plugin": "^3.0.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
