--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "fastify": "^3.8.0",
     "fastify-jwt": "^2.1.3",
     "fastify-plugin": "^3.0.0",
+    "tsc": "^1.20150623.0",
     "typescript": "^4.0.5",
     "uuid": "^8.3.1"
   },
