--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "fastify": "^3.8.0",
     "fastify-jwt": "^2.1.3",
     "fastify-plugin": "^3.0.0",
-    "fastify-socket.io": "^1.0.2",
     "fastify-swagger": "^3.5.0",
     "tsc": "^1.20150623.0",
     "typescript": "^4.0.5",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
+    "fastify-cors": "^5.2.0",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0"
   },
