--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "fastify-jwt": "^2.1.3",
     "fastify-plugin": "^3.0.0",
     "fastify-swagger": "^3.5.0",
+    "node-fetch": "^2.6.1",
+    "socket.io": "^2.3.0",
     "tsc": "^1.20150623.0",
     "typescript": "^4.0.5",
-    "uuid": "^8.3.1",
-    "socket.io": "^2.3.0"
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
