--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
   "devDependencies": {
     "@types/node": "^14.14.7",
     "fastify-cors": "^5.2.0",
+    "mocha": "^8.3.0",
+    "mocha-steps": "^1.3.0",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0"
   },
   "scripts": {
     "build": "tsc",
     "dev": "nodemon",
-    "start": "npm run build && node build/index.js"
+    "start": "npm run build && node build/index.js",
+    "test": "mocha --require mocha-steps"
   },
   "repository": {
     "type": "git",
