--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fastify-plugin": "^3.0.0",
     "fastify-swagger": "^3.5.0",
     "node-fetch": "^2.6.1",
+    "prompt-promise": "^1.0.3",
     "socket.io": "^2.3.0",
     "tsc": "^1.20150623.0",
     "typescript": "^4.0.5",
@@ -24,6 +25,7 @@
     "mocha": "^8.3.0",
     "mocha-steps": "^1.3.0",
     "nodemon": "^2.0.6",
+    "prompt": "^1.1.0",
     "ts-node": "^9.0.0"
   },
   "scripts": {
