--- a/tsconfig.json
+++ b/tsconfig.json
@@ -80,5 +80,9 @@
     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true
     /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "exclude": [
+    "test",
+    "build"
+  ]
 }
