--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "dependencies": {
     "@sentry/node": "^5.28.0",
     "@sentry/tracing": "^5.28.0",
+    "@types/busboy": "^0.2.3",
     "@types/uuid": "^8.3.0",
     "axios": "^0.21.0",
     "fastify": "^3.8.0",
     "fastify-jwt": "^2.1.3",
+    "fastify-multipart": "^4.0.3",
     "fastify-plugin": "^3.0.0",
     "fastify-swagger": "^3.5.0",
+    "form-data": "^4.0.0",
     "node-fetch": "^2.6.1",
     "prompt-promise": "^1.0.3",
     "socket.io": "^2.3.0",
