--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fastify-cors": "^5.2.0",
     "mocha": "^8.3.0",
     "mocha-steps": "^1.3.0",
+    "crypto": "^4.0.0",
     "nodemon": "^2.0.6",
     "prompt": "^1.1.0",
     "ts-node": "^9.0.0"
