--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@sentry/tracing": "^5.28.0",
     "@types/busboy": "^0.2.3",
     "@types/uuid": "^8.3.0",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "fastify": "^3.8.0",
     "fastify-jwt": "^2.1.3",
     "fastify-multipart": "^4.0.3",
@@ -27,10 +27,10 @@
     "fastify-cors": "^5.2.0",
     "mocha": "^8.3.0",
     "mocha-steps": "^1.3.0",
-    "crypto": "^4.0.0",
     "nodemon": "^2.0.6",
     "prompt": "^1.1.0",
-    "ts-node": "^9.0.0"
+    "ts-node": "^9.0.0",
+    "crypto-js": "^4.0.0"
   },
   "scripts": {
     "build": "tsc  && cp -r src/resources build/resources",
